# coffeecutie

./: .build.yml  .clang-format  .clang-format-3.8  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .jenkins.groovy  .travis.yml  BUILDING.md  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  CoffeeCutie.pro  CoffeeLaunch.storyboard  GLSUPPORT.md  LICENSE  PORT-DETAILS.md  README.Android.md  README.AppImage.md  README.BeagleBoneBlack.md  README.CI.md  README.Emscripten.md  README.Flatpak.md  README.Linux.md  README.Maemo.md  README.OSX.md  README.PressureCooker.md  README.Raspberry.md  README.Snappy.md  README.Steam.md  README.Toolchains.md  README.Ubuntu.md  README.Windows.md  README.WindowsDocker  README.WindowsUWP.md  README.md  android-native-build.sh  appveyor.yml  azure-pipelines.yml  (+34 more)
bindings/: CMakeLists.txt
bindings/android/: CMakeLists.txt  and_main.cpp  android_assets.cpp  android_wrapperfun.cpp  static.cpp  stub.cpp
bindings/android-main/: CMakeLists.txt
bindings/c-binding/: CMakeLists.txt
bindings/swig/: CMakeLists.txt  coffee_common.i  coffeeswig.cpp
coffee/: CMakeLists.txt  cdebug.h  cdisplay.h  cfiles.cpp  cfiles.h  cfunctional.h  cinput.h  cinput_keymap.h  cmath.h  cobject.cpp  cobject.h  coffee_functional.h  cregex.h  cthreading.h
coffee/asio/: CMakeLists.txt
coffee/assimp/: CMakeLists.txt  assimpfun.cpp  assimpfun.h  cassimpimporters.cpp  cassimpimporters.h  cassimptypes.h
coffee/audio/: CMakeLists.txt  caudio.cpp  caudio.h
coffee/blam/: CMakeLists.txt  cblam.h
coffee/bullet/: CMakeLists.txt
coffee/cef/: CMakeLists.txt
coffee/core/: CMakeLists.txt  coffee.cpp  coffee.h  coffee_basetypes.h  coffee_composite_types.h  coffee_macros.h  coffee_strings.h  coffee_types.h  coffee_vector_types.h
coffee/display/: cdrendererbase.cpp  cdrendererbase.h
coffee/graphics/: CMakeLists.txt
coffee/graphics_apis/: CMakeLists.txt  cgraphicsdata.h  mesh.h
coffee/image/: CMakeLists.txt  cimage.cpp  cimage.h
coffee/media/: CMakeLists.txt
coffee/oculusvr/: CMakeLists.txt
coffee/openvr/: CMakeLists.txt
coffee/scene/: cnode.cpp  cnode.h
coffee/sdl2/: CMakeLists.txt
coffee/windowing/: CMakeLists.txt
docs/: CMakeLists.txt  annotated.html  classes.html  coffee.dox  coffee.dox.in  dir_02c094de4e60967d102846e0c468b74e.html  dir_036edb14e9ee61c316a35c1a57722dc9.html  dir_037c25d1477193642f1dba1774c3f838.html  dir_0529691d26da2542ee48716b2a4df256.html  dir_056051323baa1f2ac8f1ffa4eb0a048d.html  dir_08559fb5a37ece739ce8f88479397201.html  dir_09f97fe07182a582a1beb92311b01fd7.html  dir_0b88c9e55d96f92c1bf36b3e6a447c2d.html  dir_0c2a13ed6e33a5bf855d10819eed963e.html  dir_0ca770aed5911ee7a42d85c8050bcba0.html  dir_0cadb54cdf0de50af129b96f41d79442.html  dir_0e845b3d331660051b175d3f48828781.html  dir_16663446daa8794ac0c5919117effc88.html  dir_231cf46ebb02992a9e3e77a7669962df.html  dir_23c5b8821d7c35c679c9318f137a9165.html  dir_246a807802eac790c09ea9b08fe0cf86.html  dir_2a907816a5d4b0a4f1ab2661eb685a4c.html  dir_2bddb6d17c6aefe72c91a4d7442216c7.html  dir_2fbf434bf8a54d7b580437eca128bde7.html  dir_307777828931fa86ecba18069c31a3c3.html  dir_3247618436512bf2ae397a16f9e171dd.html  dir_382fc64897a9f1e051458377dd838ee0.html  dir_39af44e06860cbacb3b36be9fe0a18d9.html  dir_3a33ebdf0f0b25e14bf5e27cb5d484a6.html  dir_3b9b52d4b287ee06c683d57cd06562fd.html  dir_3bf4e259109b6caf294f7da96fa4f965.html  dir_3cca28fbdff501b39754165f694e9e81.html  dir_3e69102a3d90272cb0f9c996ff849e2b.html  dir_3f022ac61b05009c9f1fea468a4845c8.html  dir_401e9981a30ae0d14c6264b49938e176.html  dir_4125617e1a638af4085d6d5d60b15351.html  dir_4298985dab6a9d3422779b9087d4352c.html  dir_44a514231574dbdb367b7b308e0af2b4.html  dir_45741ad99b763338336937bfc48c2359.html  dir_48f6ba493f2deb2ed3b48ec316ca150a.html  (+313 more)
docs-gen/: CMakeLists.txt  coffee.dox.in  stylish.css
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+173 more)
examples/: CMakeLists.txt
examples/boxtest/: boxtest.cpp
examples/caudio-test/: CMakeLists.txt  main.cpp
examples/cblam-testing/: CMakeLists.txt  main.cpp
examples/cgb-test/: CMakeLists.txt  main.cpp
examples/components/: CMakeLists.txt  main.cpp
examples/csharp-test/: CoffeeSharp.sln
examples/ctest/: CMakeLists.txt  base_case.cpp  cdrenderer.cpp  cdrenderer.h  main.cpp
examples/ctest-async-pbo/: CMakeLists.txt  main.cpp
examples/ctest-hud/: CMakeLists.txt  main.cpp
examples/ctest-shaderswitch/: main.cpp
examples/dynamic-test/: CMakeLists.txt
examples/env-test/: CMakeLists.txt  libcode.cpp  main.cpp
examples/font-rendering/: CMakeLists.txt
examples/media-test/: CMakeLists.txt  main.cpp
examples/pcl-test/: CMakeLists.txt  main.cpp
examples/rsread/: CMakeLists.txt  main.cpp
examples/template-test/: CMakeLists.txt  main.cpp
examples/unit-tests/: CMakeLists.txt
ext/: CMakeLists.txt
ext/kinect-shim/: CMakeLists.txt
ext/pcl-shim/: CMakeLists.txt
ext/qt-shim/: CMakeLists.txt
ext/retro-shim/: CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  README.md
src/bindings/: CMakeLists.txt
src/coffee/: CMakeLists.txt
src/ext/: CMakeLists.txt
src/libs/: openvr.patch
src/peripheral/: CMakeLists.txt  PeripheralLib_Generate.cmake
swig/: CMakeLists.txt  coffeeswig.h  coffeeswig.i  py_coffeetest.py
swig/CoffeeSharp/: CoffeeSharp.sln
tests/: CMakeLists.txt  boxtest.cpp  boxtest.h  coffeeadvancedloop.cpp  coffeeadvancedloop.h  dummy.cpp
tests/caudio-test/: CMakeLists.txt  main.cpp
tests/cblam-testing/: main.cpp
tests/cmd-api/: CMakeLists.txt  test01.cpp  test02.cpp
tests/comp-app/: CMakeLists.txt  test01.cpp
tests/ctest-hud/: CMakeLists.txt  (+3 more)
tools/: CMakeLists.txt  README.Android.md  compile-ffmpeg.sh
(+7116 files in other folders)
