if(COFFEE_BUILD_ASSIMP)
    add_subdirectory(assimp)
endif()
add_subdirectory(audio)
add_subdirectory(blam)
add_subdirectory(core)
add_subdirectory(graphics_apis)
add_subdirectory(image)
if(COFFEE_BUILD_FFMEDIA)
    add_subdirectory(media)
endif()
if(COFFEE_BUILD_OPENVR)
    add_subdirectory(openvr)
endif()
add_subdirectory(sdl2)